--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Рассписание</string>
+    <string name="app_name">Расписание</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    
+    <!-- Captions -->
+    <string name="login_button_caption">Войти</string>
+    <string name="login_facultet_caption">Выберите факултет</string>
+    <string name="login_group_caption">Выберите группу</string>
 </resources>
