--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,16 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- DRAWER -->
+    <string name="draw_open">Меню</string>
+    <string name="draw_close">Расписание</string>
     
     <!-- Captions -->
     <string name="login_button_caption">Войти</string>
     <string name="login_facultet_caption">Выберите факултет</string>
     <string name="login_group_caption">Выберите группу</string>
+    
+    <string name="setting_logout">Выйти</string>
+    
+    <string name="setting_staff">Общее</string>
 </resources>
