--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,16 @@
 	<string name="positive_caption">Да</string>	
 	<string name="negative_caption">Нет</string>
 	<string name="homework_delete_message">Вы действительно хотите удалить это домашнее задание?</string>
- 
+ 	<string name="full_download_message">
+ 	    Раздел "Преподаватели" предоставляет информацию о преподавателях,
+ 	    обущающих студентов выбранного вами факультета. Чтобы получить полный список преподавателей, 
+ 	    необходимо запросить с сервера полное расписание университета. Запрос всего расписания выполняется в фоне
+ 	    и может занять 
+ 	    несколько минут, рекомендуется наличие быстрого интернет-соединения. 
+ 	    Вы желаете выполнить этот запрос?(запрос можно выполнить позже, в разделе "Настройки")
+ 	    
+ 	</string>
+	
 	<!-- DRAWER -->
     <string name="draw_open">Меню</string>
     <string name="draw_close">Расписание</string>
