--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,10 +42,12 @@
  	
  	<string name="about_dialog_massage">
  	    Данное приложение было разработано Ткаченко Артёмом, 
- 	    студентом группы АВМ-4-024, в рамках дипломной работы. \n
- 	    
+ 	    студентом группы АВМ-024, в рамках дипломной работы.\n
+ 	    \n
  	    Благодарности: Хлопину Константину, Жижанову Андрею.
  	</string>
+ 	
+ 	<string name="version_caption">Расписание РГУПС v#</string>
  	
  	<string name="logout_dialog_message">
  	    Вы уверены, что хотите сменить группу?
