--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="lesson_list_divider">#-ая пара</string>
     
     <string name="welcome_screen_caption">
-        Настоящий органайзер для студента РУПС
+        Настоящий органайзер для студента РГУПС
     </string>
     <string name="photo_count">Фотографий:</string>
     <string name="about">О приложении</string>
