--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     
     
-    <string name="app_name">Расписание РГУПС</string>
+    <string name="app_name">РГУПС</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
@@ -38,23 +38,7 @@
 	<string name="positive_caption">Да</string>	
 	<string name="negative_caption">Нет</string>
 	<string name="homework_delete_message">Вы действительно хотите удалить это домашнее задание?</string>
- 	<string name="full_download_message">
- 	    Раздел "Преподаватели" предоставляет информацию о преподавателях,
- 	    обущающих студентов выбранного вами факультета. Чтобы получить полный список преподавателей, 
- 	    необходимо запросить с сервера полное расписание университета. Запрос всего расписания выполняется в фоне
- 	    и может занять 
- 	    несколько минут, рекомендуется наличие быстрого интернет-соединения. 
- 	    Вы желаете выполнить этот запрос?(запрос можно выполнить позже, в разделе "Настройки")
- 	    
- 	</string>
- 	
- 	<string name="setting_full_download_message">
-		Запрос всего расписания выполняется в фоне
- 	    и может занять 
- 	    несколько минут, рекомендуется наличие быстрого интернет-соединения. 
- 	    Вы желаете выполнить этот запрос?
- 	    
- 	</string>
+
  	
  	<string name="about_dialog_massage">
  	    Данное приложение было разработано Ткаченко Артёмом, 
