--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
  	</string>
 
     <string name="about_dialog_massage_2">
- 	    Благодарности:\nХлопину Константину,\nЖижанову Андрею,\nСамсонову Владимиру и\nСухоруковой Ольге.\n
+ 	    Благодарности:\nХлопину Константину,\nЖижанову Андрею,\nСамсонову Владимиру.\n
  	</string>
 
     <string name="about_dialog_massage_3">
